# alice_ai_server

./: .env.example  Cargo.toml  README.md  api.md  package-lock.json
migrations/: 01_init_database.sql  02_add_metadata_column.sql
src/: main.rs
src/block_chain/: mod.rs  monad.rs  sui.rs  sync.rs  utils.rs
src/db/: mod.rs  models.rs  operations.rs
src/routes/: agent.rs  signature.rs  user.rs
